--- a/views/spa.ejs
+++ b/views/spa.ejs
@@ -15,7 +15,7 @@
       <a href="/spa"><img src="https://i.ibb.co/s5BGD7d/logo.png" width="400" class="center" alt="logo" border="0"></a>
     </div>
     <div class="header">
-      <h1>Bar'booh!© beers review site</h1>
+      <h1>Bar'booh!© beers review site🍻</h1>
       <p>Everything <b>you need</b> to know about our beers (This is not a cheap copy of the Bar'bu)</p>
     </div>
   </div>
